Se modifica listas de sección About me

--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
           <i class="fa-solid fa-people-group fa-3x my-3"></i>
           <h3 class="my-3 fw-bold">Habilidades</h3>
           <p class="my-3">
+           <ul class="list-habilidades"> 
             <li>Comunicación efectiva</li>
             <li>Resolución de problemas</li>
             <li>Flexibilidad</li>
@@ -113,6 +114,7 @@
             <li>Pensamiento crítico</li>
             <li>Adaptabilidad</li>
             <li>Paciencia</li>
+          </ul>
           </p>
         </div>
         <div class="col-12 col-md-4">
@@ -132,22 +134,23 @@
         <div class="col-12 col-md-4">
           <i class="fa-solid fa-mountain-sun fa-3x my-3"></i>
           <h3 class="my-3 fw-bold">Intereses</h3>
-          <p class="my-3">
+          <ul class="my-3 list-intereses">
+
             <li>
-              Deportes: Como un apasionado del deporte, he desarrollado
+              <span class="resaltar">Deportes:</span> Como un apasionado del deporte, he desarrollado
               habilidades en trabajo en equipo, liderazgo y disciplina. He
               participado en equipos de fútbol y patrullas, y también disfruto
               de la actividad física individual, como correr y Gym.
             </li>
             <li>
-              Botánica: Como un aficionado a la botánica, disfruto de aprender
+              <span class="resaltar">Botánica:</span> Como un aficionado a la botánica, disfruto de aprender
               sobre la flora y fauna de mi entorno. He participado en cursos y
               talleres para mejorar mi conocimiento en esta área, y también me
               gusta visitar jardines botánicos y reservas naturales. La botánica
               me ha enseñado la importancia de la paciencia, la atención a los
               detalles y el amor por la naturaleza.
             </li>
-          </p>
+          </ul>
         </div>
       </div>
     </section>
